# growth-pilot-agent

./: .dockerignore  .env.docker  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
data/memory/: memory_store.json
deploy/: Dockerfile
docs/: BRD.md  DESIGN.md  GUIDE.md  PRD.md  TECHNICAL.md
docs/plans/: 2026-04-21-optimization-plan.md  2026-04-23-production-grade-upgrade.md  2026-04-23-top-tier-upgrade-design.md  2026-04-24-agent-architecture-upgrade.md
src/: api_models.py  cli.py  web.py
src/agents/: __init__.py  ad.py  conversion.py  orchestrator.py  prospect.py  retention.py  subsidy.py
src/auth/: dependencies.py  jwt.py  schemas.py  security.py
src/core/: __init__.py  base.py  chief.py  circuit_breaker.py  config.py  context.py  evaluator.py  events.py  expert.py  guardrails.py  hooks.py  llm_factory.py  models.py  observability.py  state.py  token_tracker.py
src/db/: database.py  models.py
src/evals/: __init__.py  dataset.py  evaluator.py  report.py
src/graph/: __init__.py  checkpoint.py  expert_subgraph.py  graph.py  nodes.py  state.py  workflow.py
src/guardrails/: __init__.py  input_guard.py  output_guard.py
src/memory/: __init__.py  embedding.py  manager.py  vector_store.py
src/middleware/: __init__.py
src/prompts/: __init__.py
src/prompts/templates/: __init__.py  agent_prompts.py  base.py
src/report/: __init__.py  generator.py
src/tools/: __init__.py  expert_tools.py  registry.py
src/tools/ad/: __init__.py  audience_analyzer.py  bid_optimizer.py  creative_analyzer.py  rta_strategy.py
src/tools/common/: __init__.py  data_loader.py  experiment_platform.py  secure_loader.py  visualizer.py
src/tools/conversion/: attributor.py  coupon_designer.py  funnel_analyzer.py  reach_planner.py  seasonal_analyzer.py  slot_allocator.py
src/tools/prospect/: feature_engine.py  intent_model.py  ltv_predictor.py  segmentor.py  user_scorer.py
src/tools/retention/: __init__.py  churn_predictor.py  cohort_analyzer.py  nurture_planner.py  winback_planner.py
src/tools/subsidy/: __init__.py  budget_optimizer.py  causal_engine.py  elasticity.py  subsidy_allocator.py
tests/: __init__.py  conftest.py  test_observability.py
tests/test_api/: test_auth.py
tests/test_auth/: test_dependencies.py  test_security.py
tests/test_core/: test_circuit_breaker.py  test_config.py  test_events.py  test_models.py
tests/test_db/: test_models.py
tests/test_evals/: test_dataset.py  test_evaluator.py
tests/test_graph/: test_nodes.py  test_state.py  test_workflow.py
tests/test_guardrails/: test_edge_cases.py  test_input.py  test_output.py
tests/test_memory/: test_manager.py
tests/test_tools/: test_ad_tools.py  test_conversion_tools.py  test_prospect_tools.py  test_registry.py  test_retention_tools.py  test_secure_loader.py  test_subsidy_tools.py
