[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "growth-pilot-agent"
version = "4.0.0"
description = "Multi-Agent user growth platform for freight services"
requires-python = ">=3.12"

dependencies = [
    # Agent framework
    "langgraph>=0.2",
    "langchain-core>=0.3",
    # LLM
    "openai>=1.30",
    # ML / Stats
    "lightgbm>=4.0",
    "scikit-learn>=1.3",
    "dowhy>=0.11",
    "pulp>=2.7",
    "statsmodels>=0.14",
    "shap>=0.44",
    "lifetimes>=0.11",
    "scipy>=1.11",
    # Data
    "pandas>=2.0",
    "numpy>=1.24",
    "pydantic>=2.0",
    # Visualization
    "matplotlib>=3.7",
    "seaborn>=0.12",
    # Prompt
    "jinja2>=3.1",
    "pyyaml>=6.0",
    # CLI
    "click>=8.1",
    "rich>=13.0",
    # Server
    "fastapi>=0.110",
    "sse-starlette>=2.0",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
gpa = "src.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
markers = [
    "integration: marks integration tests",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E741"]
