[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "growth-pilot-agent"
version = "6.0.0"
description = "Production-grade multi-agent user growth platform"
requires-python = ">=3.12"

dependencies = [
    # Agent framework
    "langgraph>=0.2",
    "langchain-core>=0.3",
    # LLM
    "openai>=1.30",
    # ML / Stats
    "lightgbm>=4.0",
    "scikit-learn>=1.3",
    "dowhy>=0.11",
    "pulp>=2.7",
    "statsmodels>=0.14",
    "shap>=0.44",
    "lifetimes>=0.11",
    "scipy>=1.11",
    # Data
    "pandas>=2.0",
    "numpy>=1.24",
    "pydantic>=2.0",
    # Visualization
    "matplotlib>=3.7",
    "seaborn>=0.12",
    # Prompt
    "jinja2>=3.1",
    "pyyaml>=6.0",
    # CLI
    "click>=8.1",
    "rich>=13.0",
    # Server
    "fastapi>=0.110",
    "sse-starlette>=2.0",
    "uvicorn>=0.29",
    "pydantic-settings>=2.13.1",
    "langchain-openai>=1.1.14",
    # Database
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "aiosqlite>=0.19",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "bcrypt<4.1",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    # Rate limiting
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
gpa = "src.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
markers = [
    "integration: marks integration tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E741"]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24",
]
